# diraloguer

./: Cargo.toml  README.md
examples/: paragraph.rs
src/: lib.rs  main.rs
tests/: information.rs
